# mythrax

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  DEVELOPMENT.md  README.md  RED_TEAM_ARCHITECTURE_BRIEF.md  RED_TEAM_BRIEF.md  REINITIALIZATION.md  TODO.md  clippy_out.json  clippy_output.json  fix_embeddings.py  issue_001.md  issue_002.md  issue_003.md  issue_004.md  issue_005.md  issue_006.md  issue_1.md  issue_1_embeddings.md  issue_1_llm_empty_input.md  issue_1_spof_lock_retry.md  issue_2.md  issue_2_meta_skill_json_panic.md  issue_2_orchestration_injection.md  issue_2_search.md  issue_3.md  issue_3_evals_happy_path.md  issue_3_graduation.md  issue_3_synthesis_nan_sort_panic.md  issue_4.md  issue_4_architectural_coupling.md  issue_4_crud.md  issue_4_synthesis_missing_id.md  issue_5.md  issue_5_api.md  issue_5_db_backend_unescape.md  issue_5_file_coalescing_loss.md  issue_6.md  issue_6_18_month_projection.md  (+41 more)
.agents/: AGENTS.md  loop_state.md
.cargo/: config.toml
.config/: nextest.toml
.handoffs/: handoff_task_4c.md  handoff_task_8.md
.jules/: bolt.md  sentinel.md
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
mythrax-core/: Cargo.toml  clippy_output.json  cognitive_complexity.json  cognitive_complexity_2.json
mythrax-core/bench_data/: BASELINE.md  BASELINE_DEV25.json  BASELINE_DEV50.json  results_full500.jsonl  tuned_params.json  tuned_params_gold_v2.6.0.json
mythrax-core/scratch/: backend_diff.patch  backend_diff.txt  benchmark_mxbai_mlx.py  check_cache.rs  check_db.rs  convert_ast.py  ddbf2d0_backend.patch  debug_profiles.txt  define_analyzer.md  define_analyzer_docs.json  fix_episode_save.py  fix_search.py  generate_seeds.rs  generated_seeds.txt  hybrid_search.md  hybrid_search_docs.json  parsed_docs.json  runner_234.rs  runner_diff.patch  scoring_and_ranking.md  search_timings.txt  simulate.rs  sweep_v2.py
mythrax-core/scripts/: security_audit.py
mythrax-core/src/: api.rs  auth.rs  cli.rs  contracts.rs  daemon.rs  db.rs  embeddings.rs  lib.rs  main.rs  math.rs  mcp.rs  mcp_routes.rs  parser.rs  secret_filter.rs  store.rs  verify.rs  wal.rs  watcher.rs
mythrax-core/src/bench/: agent_recall.rs  metrics.rs  mod.rs  runner.rs
mythrax-core/src/cognitive/: arbor.rs  compactor.rs  critic.rs  executor.rs  forge.rs  governor.rs  harvest.rs  memory_os.rs  meta_skill.rs  mod.rs  paging.rs  synthesis.rs
mythrax-core/src/db/: backend.rs  blackboard.rs  cognitive_tasks.rs  crud_operations.rs  forge_pipeline.rs  graduation_pipeline.rs  mod.rs  query_classification.rs  schema.rs  search_pipeline.rs
mythrax-core/src/hooks/: adapters.rs  mod.rs  precompact.rs  reflect.rs  shell.rs  stop.rs
mythrax-core/src/llm/: mlx_weights.rs  mod.rs  mxbai_mlx.rs  nomic_mlx.rs  qwen2_mlx.rs  router.rs
mythrax-core/src/mcp_routes/: htr_handlers.rs  manage_handlers.rs  read_handlers.rs  vault_handlers.rs  write_handlers.rs
mythrax-core/src/retrieval/: bm25.rs  boosts.rs  mod.rs
mythrax-core/src/vault/: distillation.rs  ingestion.rs  markdown.rs  mod.rs  operations.rs  organization.rs  watcher.rs
mythrax-core/tests/: task4_tests.rs  test_abandoned_session_sweep.rs  test_agent_recall_bench.rs  test_arbor_htr_loop_lifecycle.rs  test_archived_demotion.rs  test_async_embedding_execution.rs  test_auth_config.rs  test_batch_embedding_equivalence.rs  test_bench_e2e_smoke.rs  test_bench_metrics.rs  test_bm25.rs  test_boosts.rs  test_bpe_tokenizer.rs  test_calibrated_confidence.rs  test_chat_history_dynamic_sliding_window.rs  test_cli_e2e.rs  test_client_server_auto_routing.rs  test_compactor.rs  test_compactor_decay_safety.rs  test_compactor_unit.rs  test_completion_dynamic_server.rs  test_context_aware_reranking.rs  test_contradiction_detection.rs  test_count_human_messages.rs  test_cross_encoder_mlx.rs  test_cycle_proof_traversal.rs  test_data_hierarchy_flow.rs  test_discovery_tokens.rs  test_distillation.rs  test_external_model_routing.rs  test_forge.rs  test_fts_cap.rs  test_gaussian_temporal.rs  test_get_episodes_by_node_type.rs  test_hnsw_tuning.rs  test_hook_adapters.rs  test_hook_io_discipline.rs  test_hybrid_fusion.rs  test_hybrid_hydration_hook.rs  test_hydration_cap.rs  (+56 more)
mythrax-forge/: pyproject.toml
mythrax-forge/src/mythrax_forge/: __init__.py  client.py  compactor.py  critic.py  executor.py  scheduler.py  synthesis.py
mythrax-forge/tests/: test_client.py  test_compactor.py  test_critic.py  test_executor.py  test_safety_gate.py  test_synthesis.py
(+240 files in other folders)
