[package]
name = "mythrax-core"
version = "2.5.1"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
surrealdb = { version = "3.1.5", features = ["kv-surrealkv", "kv-mem"] }
surrealdb-types = "3.1.5"
sysinfo = "0.30"
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.5"
futures-util = { version = "0.3", features = ["alloc"] }
rust-stemmers = "1.2"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
tower = { version = "0.4", features = ["util"] }
regex = "1.10"
pulldown-cmark = "0.10"
subtle = "2.5"
rusqlite = { version = "0.31", features = ["bundled"] }
pdf-extract = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
rlimit = "0.10"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
mlx-rs = { version = "0.25.3", optional = true }
safetensors = { version = "0.4.3", optional = true }

tempfile = "3.8"

[dev-dependencies]
lopdf = "0.38.0"

[[bin]]
name = "mythrax"
path = "src/main.rs"

[features]
mlx = ["dep:mlx-rs", "dep:safetensors"]
bench = []
test-mock = []
test-utils = []

[[bin]]
name = "bench"
path = "src/bench/runner.rs"
required-features = ["bench"]


